# 3rdparty-build

./: .gitignore  premake5.lua
libpng-1.6.26/: premake5.lua
openssl-1.0.2d/: premake5.lua
pahomqtt.c-1.0.3/: .premake5.lua.swp  CMakeLists.txt  premake5.lua
pahomqtt.c-1.0.3/src/: Heap.c  Heap.h  MQTTAsync.c  MQTTAsync.h  MQTTClient.h  Socket.c  Tree.c
premake/modules/: modules.lua
premake/modules/androidmk/: _preload.lua  androidmk.lua  androidmk_project.lua  androidmk_solution.lua
premake/modules/ndk/: .makefile.lua.swp  common.lua  makefile.lua  manifest.lua  ndk.lua
premake/modules/parseMakefile/: parseMakefile.lua
premake/modules/vsandroid/: _preload.lua  vsandroid_vcxproj.lua
yappy/: premake5.lua
yappy/src/: yappy.cpp  yappy.hpp
zlib-1.2.11/: premake5.lua
